--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chai": "^1.10.0",
     "commander": "^2.5.1",
     "html-pdf": "^0.3.0",
+    "jspdf": "^1.3.3",
     "mocha": "^2.1.0",
     "mustache": "^0.8.2"
   },
