--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "A tool to generate a web page containing your resume",
   "main": "index.js",
   "dependencies": {
+    "btoa": "^1.2.1",
     "chai": "^1.10.0",
     "commander": "^2.19.0",
+    "handlebars": "^4.7.6",
+    "helper-date": "^1.0.1",
     "html-pdf": "^2.2.0",
     "jspdf": "^1.3.3",
     "mocha": "^5.2.0",
-    "mustache": "^3.0.1"
+    "mustache": "^3.2.1",
+    "puppeteer": "^5.2.1"
   },
   "devDependencies": {},
   "scripts": {
