--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,16 +3,28 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [       
-        {
-            "type": "node",
+    "configurations": [         
+       {
+            "name": "ExportPDF",
+            "program": "${workspaceFolder}/cli.js",
             "request": "launch",
-            "name": "Launch Program",
             "skipFiles": [
                 "<node_internals>/**"
             ],
+            "type": "node",
+            "args": ["export","resume.json","full"],
+        },
+        /*
+        {
+            "name": "Export HTML",
             "program": "${workspaceFolder}/cli.js",
-            "args": ["export","resume-schema.json","full"],
-        }
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node",
+            "args": ["exportToHtml","resume.json","full"],
+        },*/
+           
     ]
 }
